# pg_mentat

./: .claude-state-plan.md  .claude-team-config.json  .claude-transcript.jsonl  .dockerignore  .envrc  .gitignore  .gitlab-ci.yml  ACTION_REQUIRED.md  AUDIT_FINDINGS.md  BATCH_EDN_SUMMARY.md  BENCHMARKS.md  CAPACITY_PLANNING.md  CHANGELOG.md  CI_CD_GUIDE.md  CLAUDE_STATE_FILES.md  CONTRIBUTING.md  CURRENT_STATUS.md  Cargo.toml  ChangeLog  Containerfile  DATOMIC_INFO.md  DEMO_README.md  Dockerfile  ENVIRONMENT_BLOCKER_ANALYSIS.md  EXAMPLES.md  EXPERT_REVIEW.md  EXPERT_REVIEW_MARCO_SLOT.md  EXPERT_REVIEW_MENTAT_TEAM.md  FINAL_SESSION_SUMMARY.md  FINAL_TEST_STATUS.md  FINAL_VALIDATION_REPORT.md  FUNCTION_NAMING_CLEANUP.md  HANDOFF_SUMMARY.md  HONEST_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SESSION_SUMMARY.md  IMPLEMENTATION_STATUS_UPDATE.md  IMPLEMENTATION_SUMMARY.md  MANUAL_SMOKE_TEST_RESULTS.md  META.json  (+58 more)
.tmp/: .tmp4gHPho  (+3 more)
core/: Cargo.toml
core-traits/: Cargo.toml  lib.rs  value_type_set.rs  values.rs
core/src/: lib.rs  sql_types.rs
db/: Cargo.toml
db-traits/: Cargo.toml  errors.rs  lib.rs
db/src/: cache.rs  db.rs  debug.rs  internal_types.rs  lib.rs  metadata.rs  schema.rs  temporal.rs  timelines.rs  tx_observer.rs
db/tests/: temporal_tests.rs  value_tests.rs
edn/: Cargo.toml
edn/src/: entities.rs  lib.rs  matcher.rs  namespaceable_name.rs  pretty_print.rs  query.rs  types.rs  utils.rs
edn/tests/: query_tests.rs  tests.rs
mentatd/: CONCURRENCY_IMPROVEMENTS.md  Cargo.toml  PERFORMANCE.md  README.md  mentatd.toml.example  test_concurrency.sh
mentatd/benches/: cache.rs  load_test.sh  serialization.rs
mentatd/src/: cache.rs  config.rs  db_cache.rs  lib.rs  main.rs  metrics.rs  pool.rs  server.rs  session.rs  stream.rs  websocket.rs
mentatd/src/protocol/: datomic_client.rs  mod.rs  parser.rs  serializer.rs  transit_parser.rs  transit_serializer.rs
mentatd/tests/: INTEGRATION_TEST_SUMMARY.md  README.md  TEST_RESULTS.md  client_integration_tests.rs  datomic_protocol_tests.rs  db_cache_test.rs  helpers.rs  integration_test.rs  operations_tests.rs  parser_tests.rs  transit_tests.rs  websocket_tests.rs
mentatd/tests/datomic_client/: README.md  compatibility_report.md  project.clj  test_client.sh  test_queries.clj  test_transit.sh
pg_mentat/: CACHE_IMPLEMENTATION.md  Cargo.toml  IMPLEMENTATION.md  IMPLEMENTATION_STATUS.md  README.md  STORAGE_FUNCTIONS.md  STORAGE_PHASE1.md  TEST_EXECUTION_RESULTS.md  TEST_EXECUTION_STATUS.md  TEST_MIGRATION_GUIDE.md  TEST_PHASE1_SUMMARY.md  TEST_PORT_STATUS.md  WORKAROUNDS.md  pg_mentat.control
pg_mentat/.github/workflows/: test.yml
pg_mentat/docs/: API_FUNCTIONS.md  EDN_TYPE.md  MIGRATION_GUIDE.md  SQL_INTEGRATION.md  schema-design.md  typedvalue-mapping.md
pg_mentat/migrations/: 001_bytea_to_typed_columns.sql
pg_mentat/sql/: 00_schema.sql  01_types.sql  02_tables.sql  03_indexes.sql  04_constraints.sql  05_functions.sql  06_bootstrap_data.sql  07_function_aliases.sql  08_datom_helpers.sql  09_view_helpers.sql  10_narrow_storage.sql  11_pg_tre_helpers.sql  12_fuzzystrmatch_helpers.sql  13_pg_trgm_helpers.sql  14_rum_helpers.sql  15_pgvector_helpers.sql  16_pgque_helpers.sql  17_pg_infer_helpers.sql  18_postgis_helpers.sql  19_pg19_graph_helpers.sql  20_timescaledb_helpers.sql  21_pg_partman_helpers.sql  22_pg_cron_helpers.sql  23_operational_accessors.sql  24_current_projection.sql  25_entid_collision_repair.sql  README.md  bootstrap.sql  migrate_partition_datoms.sql  migrate_storage_redesign_phase1.sql  monitoring_views.sql  pg_mentat--1.0.0--1.1.0.sql  pg_mentat--1.0.0.sql  pg_mentat--1.1.0--1.2.1.sql  pg_mentat--1.2.1--1.3.0.sql  pg_mentat--1.3.0--1.4.0.sql  pg_mentat--1.4.0--1.5.0.sql  pg_mentat--1.5.0--1.5.1.sql  pg_mentat--1.5.1--1.5.2.sql  pg_mentat--1.5.2--1.5.3.sql  (+6 more)
pg_mentat/sql/archive/: README.md  migrate_bytea_to_typed.sql  migrate_reduce_indexes.sql  migrate_storage_redesign_phase2_backfill.sql
pg_mentat/sql/tests/: test_aliases.sql  test_datalog_views.sql  test_datom_helpers.sql  test_edn_functions.sql  test_edn_pretty.sql  test_multi_tenant_rls.sql  test_storage_migration_phase1.sql
pg_mentat/src/: aggregate_tests.rs  batch_operation_tests.rs  bootstrap_tests.rs  boundary_value_tests.rs  cache.rs  cache_tests.rs  cardinality_tests.rs  cas_tests.rs  comprehensive_retract_tests.rs  comprehensive_upsert_tests.rs  concurrency_tests.rs  cross_entity_tests.rs  current_projection_tests.rs  data_integrity_tests.rs  datalog_feature_tests.rs  edge_case_query_tests.rs  entid_collision_tests.rs  entity_lifecycle_tests.rs  entity_tests.rs  error.rs  error_handling_tests.rs  error_regression_tests.rs  find_spec_exhaustive_tests.rs  find_spec_tests.rs  fulltext_bm25_tests.rs  fuzzy_match_tests.rs  fuzzystrmatch_tests.rs  generated_value_tests.rs  ground_collection_tests.rs  history_tests.rs  idempotency_tests.rs  infra_extensions_tests.rs  input_parameter_tests.rs  lib.rs  lib.rs.backup  lookup_ref_tests.rs  mixed_operation_tests.rs  monitoring.rs  multi_transaction_workflow_tests.rs  namespace_tests.rs  (+44 more)
pg_mentat/src/functions/: bootstrap.rs  edn_functions.rs  edn_helpers.rs  entity.rs  excision.rs  helpers.rs  materialized_views.rs  mod.rs  pull.rs  query.rs  recursive_queries.rs  schema.rs  stats.rs  store_management.rs  subscriptions.rs  time_travel.rs  transact.rs  virtual_tables.rs
pg_mentat/tests/: README.md  smoke.sql  test_common.rs  test_fulltext.rs  test_query.rs  test_rules.rs  test_timetravel.rs
public-traits/: Cargo.toml  errors.rs  lib.rs
query-algebrizer/: Cargo.toml  RULES_IMPLEMENTATION.md
query-algebrizer/src/: lib.rs  stratification.rs  types.rs  validate.rs
query-algebrizer/tests/: rules.rs  type_reqs.rs
query-pull/: Cargo.toml
query-pull/src/: lib.rs
sql/: Cargo.toml
sql/src/: lib.rs
tolstoy/: Cargo.toml
tolstoy-traits/: Cargo.toml  errors.rs  lib.rs
tolstoy/src/: lib.rs  remote_client.rs  schema.rs  syncer.rs  types.rs
tools/cli/: Cargo.toml
tools/pg_mentat_cli/: Cargo.toml  README.md
transaction/: Cargo.toml
transaction/src/: lib.rs  query.rs
(+460 files in other folders)
