[workspace]
resolver = "2"
members = [
  "edn",
  "core-traits",
  "core",
  "pg_mentat",
  "mentatd",
]

[workspace.package]
version = "1.2.1"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/gburd/pg_mentat"
authors = [
  "Gregory Burd <greg@burd.me>",
  "Richard Newman <rnewman@twinql.com>",
  "Nicholas Alexander <nalexander@mozilla.com>",
  "Victor Porof <vporof@mozilla.com>",
  "Jordan Santell <jsantell@mozilla.com>",
  "Joe Walker <jwalker@mozilla.com>",
  "Emily Toop <etoop@mozilla.com>",
  "Grisha Kruglov <grigory@kruglov.ca>",
  "Kit Cambridge <kit@yakshaving.ninja>",
  "Edouard Oger <eoger@fastmail.com>",
  "Thom Chiovoloni <tchiovoloni@mozilla.com>",
]

[workspace.lints.clippy]
# Panic prevention (to be promoted to deny as code is cleaned up)
unwrap_used = "allow"
expect_used = "allow"
panic = "allow"
panic_in_result_fn = "allow"
unimplemented = "deny"
# Code hygiene
dbg_macro = "deny"
todo = "deny"
print_stdout = "deny"
print_stderr = "deny"
# Safety
await_holding_lock = "deny"
large_futures = "deny"
exit = "deny"
mem_forget = "deny"
# Temporarily allowed (pre-existing, non-safety, to be fixed incrementally)
type_complexity = "allow"
needless_borrow = "allow"
needless_pass_by_value = "allow"
redundant_closure_for_method_calls = "allow"
unnecessary_wraps = "allow"
manual_let_else = "allow"
single_match_else = "allow"
too_many_lines = "allow"
too_many_arguments = "allow"
get_first = "allow"
collapsible_match = "allow"
collapsible_else_if = "allow"
single_match = "allow"
cloned_ref_to_slice_refs = "allow"
unnecessary_cast = "allow"
collapsible_str_replace = "allow"
needless_range_loop = "allow"
manual_strip = "allow"
unnecessary_map_or = "allow"
useless_format = "allow"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
