[package]
edition = "2021"
name = "core_traits"
version = "1.5.4"
workspace = ".."
license = "Apache-2.0"

[lib]
name = "core_traits"
path = "lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
enumset = "1.1"
lazy_static = "1.5"
indexmap = "2.11"
ordered-float = { version = "5.0", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
bytes = { version = "1.0.1", features = ["serde"] }

[dependencies.edn]
path = "../edn"
features = ["serde_support"]
