[package]
edition = "2021"
name = "mentat_core"
version = "0.0.2"
workspace = ".."

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
enum-set = "0.0.8"
thiserror = "2.0"
indexmap = "2.11"
ordered-float = { version = "5.0", features = ["serde"] }
uuid = { version = "1.18", features = ["v4", "serde"] }

[dependencies.core_traits]
path = "../core-traits"

[dependencies.edn]
path = "../edn"
features = ["serde_support"]
