[package]
edition = "2021"
name = "mentat_core"
version = "1.3.0"
workspace = ".."

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
enumset = "1.1"
thiserror = "2.0.18"
indexmap = "2.13.0"
ordered-float = { version = "5.1.0", features = ["serde"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }

[dependencies.core_traits]
path = "../core-traits"

[dependencies.edn]
path = "../edn"
features = ["serde_support"]
