[package]
name = "db_traits"
version = "0.0.2"
edition = "2021"
workspace = ".."

[lib]
name = "db_traits"
path = "lib.rs"

[features]
sqlcipher = ["rusqlite/sqlcipher"]

[dependencies]
thiserror = "2.0"
[dependencies.edn]
path = "../edn"

[dependencies.core_traits]
path = "../core-traits"

[dependencies.rusqlite]
version = "0.37"
features = ["limits", "bundled"]
