[package]
edition = "2021"
name = "mentat_db"
version = "0.0.2"
workspace = ".."

[features]
default = []
sqlcipher = ["rusqlite/sqlcipher"]
syncable = ["serde", "serde_json", "serde_derive"]

[dependencies]
thiserror = "2.0"
indexmap = "2.11"
itertools = "0.14"
lazy_static = "1.5"
log = "0.4"
ordered-float = "5.0"
time = "0.3"
petgraph = "0.8"
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

[dependencies.rusqlite]
version = "0.37"
features = ["limits", "bundled"]

[dependencies.edn]
path = "../edn"

[dependencies.mentat_core]
path = "../core"

[dependencies.core_traits]
path = "../core-traits"

[dependencies.db_traits]
path = "../db-traits"

[dependencies.mentat_sql]
path = "../sql"

# TODO: This should be in dev-dependencies.
[dependencies.tabwriter]
version = "1.4"

[dev-dependencies]
env_logger = "0.11"
#tabwriter = { version = "1.2.1" }
