[package]
edition = "2021"
name = "mentat_db"
version = "0.0.2"
workspace = ".."

[features]
default = []
sqlcipher = ["rusqlite/sqlcipher"]
syncable = ["serde", "serde_json", "serde_derive"]

[dependencies]
thiserror = "2.0.18"
indexmap = "2.13.0"
itertools = "0.14.0"
lazy_static = "1.5.0"
log = "0.4.29"
ordered-float = "5.1.0"
time = "0.3.47"
petgraph = "0.8.3"
serde = { version = "1.0.228", optional = true }
serde_json = { version = "1.0.149", optional = true }
serde_derive = { version = "1.0.228", optional = true }

[dependencies.rusqlite]
version = "0.38.0"
features = ["limits", "bundled"]

[dependencies.edn]
path = "../edn"

[dependencies.mentat_core]
path = "../core"

[dependencies.core_traits]
path = "../core-traits"

[dependencies.db_traits]
path = "../db-traits"

[dependencies.mentat_sql]
path = "../sql"

# TODO: This should be in dev-dependencies.
[dependencies.tabwriter]
version = "1.4.1"

[dev-dependencies]
env_logger = "0.11.9"
#tabwriter = { version = "1.2.1" }
