[package]
name = "edn"
version = "0.1.0"
authors = ["Joe Walker <jwalker@mozilla.com>"]
workspace = ".."

license = "Apache-2.0"
repository = "https://github.com/mozilla/mentat"
description = "EDN parser for Project Mentat"
readme = "./README.md"

[dependencies]
chrono = "~0.4"
itertools = "~0.10"
num = "~0.4"
ordered-float = "~2.7"
pretty = "~0.10"
uuid = { version = "~0.8", features = ["v4", "serde"] }
serde = { version = "~1.0", optional = true }
serde_derive = { version = "~1.0", optional = true }
peg = "~0.7"

[dev-dependencies]
serde_test = "~1.0"
serde_json = "~1.0"

[features]
serde_support = ["serde", "serde_derive"]
