[package]
edition = "2021"
name = "edn"
version = "0.1.0"
authors = ["Joe Walker <jwalker@mozilla.com>"]
workspace = ".."

license = "Apache-2.0"
repository = "https://github.com/mozilla/mentat"
description = "EDN parser for Project Mentat"
readme = "./README.md"

[dependencies]
chrono = "0.4"
itertools = "0.14.0"
num = "0.4.3"
ordered-float = "5.1.0"
pretty = "0.12.5"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
serde = { version = "1.0.228", optional = true }
serde_derive = { version = "1.0.228", optional = true }
peg = "0.8.5"
bytes = "1.11.1"
hex = "0.4.3"

[dev-dependencies]
serde_test = "1.0.177"
serde_json = "1.0.149"

[features]
serde_support = ["serde", "serde_derive"]
