[package]
edition = "2021"
name = "public_traits"
version = "0.0.2"
workspace = ".."

[lib]
name = "public_traits"
path = "lib.rs"

[features]
default = ["syncable"]
sqlcipher = ["rusqlite/sqlcipher"]
syncable = ["tolstoy_traits", "hyper", "serde_json"]

[dependencies]
thiserror = "2.0"

http = "1.3"
tokio = { version = "1.8.0", features = ["full"] }
uuid = "1.0"

[dependencies.rusqlite]
version = "0.37"
features = ["limits", "bundled"]

[dependencies.hyper]
version = "1.7"
optional = true

[dependencies.serde_json]
version = "1.0"
optional = true

[dependencies.edn]
path = "../edn"

[dependencies.core_traits]
path = "../core-traits"

[dependencies.db_traits]
path = "../db-traits"

[dependencies.query_algebrizer_traits]
path = "../query-algebrizer-traits"

[dependencies.query_projector_traits]
path = "../query-projector-traits"

[dependencies.query_pull_traits]
path = "../query-pull-traits"

[dependencies.sql_traits]
path = "../sql-traits"

[dependencies.tolstoy_traits]
path = "../tolstoy-traits"
optional = true
