[package]
edition = "2021"
name = "public_traits"
version = "0.0.2"
workspace = ".."

[lib]
name = "public_traits"
path = "lib.rs"

[features]
default = ["syncable"]
sqlcipher = ["rusqlite/sqlcipher"]
syncable = ["tolstoy_traits", "hyper", "serde_json"]

[dependencies]
thiserror = "2.0.18"

http = "1.4.0"
tokio = { version = "1.50.0", features = ["full"] }
uuid = "1.21.0"

[dependencies.rusqlite]
version = "0.38.0"
features = ["limits", "bundled"]

[dependencies.hyper]
version = "1.8.1"
optional = true

[dependencies.serde_json]
version = "1.0.149"
optional = true

[dependencies.edn]
path = "../edn"

[dependencies.core_traits]
path = "../core-traits"

[dependencies.db_traits]
path = "../db-traits"

[dependencies.query_algebrizer_traits]
path = "../query-algebrizer-traits"

[dependencies.query_projector_traits]
path = "../query-projector-traits"

[dependencies.query_pull_traits]
path = "../query-pull-traits"

[dependencies.sql_traits]
path = "../sql-traits"

[dependencies.tolstoy_traits]
path = "../tolstoy-traits"
optional = true
