[package]
edition = "2021"
name = "mentat_query_algebrizer"
version = "0.0.2"
workspace = ".."

[dependencies]
thiserror = "2.0"

[dependencies.edn]
path = "../edn"

[dependencies.mentat_core]
path = "../core"

[dependencies.core_traits]
path = "../core-traits"

[dependencies.query_algebrizer_traits]
path = "../query-algebrizer-traits"

[dev-dependencies]
itertools = "0.14"
