[package]
edition = "2021"
name = "mentat_query_pull"
version = "0.0.2"
workspace = ".."

[features]
sqlcipher = ["rusqlite/sqlcipher"]

[dependencies]
thiserror = "2.0"

[dependencies.query_pull_traits]
path = "../query-pull-traits"

[dependencies.rusqlite]
version = "0.37"
features = ["limits", "bundled"]

[dependencies.edn]
path = "../edn"

[dependencies.mentat_core]
path = "../core"

[dependencies.core_traits]
path = "../core-traits"

[dependencies.mentat_db]
path = "../db"
