[package]
edition = "2021"
name = "mentat_sql"
version = "0.0.2"
workspace = ".."

[features]
sqlcipher = ["rusqlite/sqlcipher"]

[dependencies]
thiserror = "2.0"
ordered-float = "5.0"

[dependencies.rusqlite]
version = "0.37"
features = ["limits", "bundled"]

[dependencies.core_traits]
path = "../core-traits"

[dependencies.mentat_core]
path = "../core"

[dependencies.sql_traits]
path = "../sql-traits"
