[package]
edition = "2021"
name = "mentat_sql"
version = "0.0.2"
workspace = ".."

[features]
sqlcipher = ["rusqlite/sqlcipher"]

[dependencies]
thiserror = "2.0.18"
ordered-float = "5.1.0"

[dependencies.rusqlite]
version = "0.38.0"
features = ["limits", "bundled"]

[dependencies.core_traits]
path = "../core-traits"

[dependencies.mentat_core]
path = "../core"

[dependencies.sql_traits]
path = "../sql-traits"
