[package]
edition = "2021"
name = "tolstoy_traits"
version = "0.0.2"
workspace = ".."

[lib]
name = "tolstoy_traits"
path = "lib.rs"

[features]
sqlcipher = ["rusqlite/sqlcipher"]

[dependencies]
thiserror = "2.0"

http = "1.3"
hyper = "1.7"
serde_json = "1.0"
uuid = { version = "1" }

[dependencies.rusqlite]
version = "0.37"
features = ["limits", "bundled"]

[dependencies.db_traits]
path = "../db-traits"
