[package]
edition = "2021"
name = "tolstoy_traits"
version = "0.0.2"
workspace = ".."

[lib]
name = "tolstoy_traits"
path = "lib.rs"

[features]
sqlcipher = ["rusqlite/sqlcipher"]

[dependencies]
thiserror = "2.0.18"

http = "1.4.0"
hyper = "1.8.1"
serde_json = "1.0.149"
uuid = { version = "1.21.0" }

[dependencies.rusqlite]
version = "0.38.0"
features = ["limits", "bundled"]

[dependencies.db_traits]
path = "../db-traits"
