[package]
edition = "2021"
name = "mentat_tolstoy"
version = "0.0.2"
workspace = ".."
authors = ["Grisha Kruglov <gkruglov@mozilla.com>"]

[features]
sqlcipher = ["rusqlite/sqlcipher"]

[dependencies]
thiserror = "2.0"
futures = "0.3"
hyper = { version = "1.7", features = ["full"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2"] }
hyper-tls = "0.6"
http = "1.3"
http-body-util = "0.1"
bytes = "1.0"
log = "0.4"
mime = "0.3"
tokio = { version = "1.8.0", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
serde_cbor = "0.11"
serde_derive = "1.0"
lazy_static = "1.5"
uuid = { version = "1", features = ["v4", "serde"] }

[dependencies.rusqlite]
version = "0.37"
features = ["limits", "bundled"]

[dependencies.edn]
path = "../edn"

[dependencies.mentat_core]
path = "../core"

[dependencies.core_traits]
path = "../core-traits"

[dependencies.mentat_db]
path = "../db"
features = ["syncable"]

[dependencies.db_traits]
path = "../db-traits"

[dependencies.tolstoy_traits]
path = "../tolstoy-traits"

[dependencies.public_traits]
path = "../public-traits"

[dependencies.mentat_transaction]
path = "../transaction"
