[package]
edition = "2021"
name = "mentat_cli"
version = "0.0.2"

# Forward mentat's features.
[features]
default = ["bundled_sqlite3", "syncable"]
sqlcipher = ["mentat/sqlcipher"]
bundled_sqlite3 = ["mentat/bundled_sqlite3"]
syncable = ["mentat/syncable"]

[lib]
name = "mentat_cli"
path = "src/mentat_cli/lib.rs"

[[bin]]
name = "mentat_cli"
doc = false
test = false

[dependencies]
combine = "4.6.7"
dirs = "6.0.0"
env_logger = "0.11.9"
thiserror = "2.0.18"

getopts = "0.2.24"
lazy_static = "1.5.0"
linefeed = "0.6.0"
log = "0.4.29"
tabwriter = "1.4.1"
tempfile = "3.26.0"
termion = "4.0.6"
time = "0.3.47"
bytes = { version = "1.11.1", features = ["serde"] }
hex = "0.4.3"

[dependencies.rusqlite]
version = "0.38.0"
features = ["limits", "bundled"]

[dependencies.mentat]
path = "../.."
default-features = false

[dependencies.edn]
path = "../../edn"

[dependencies.core_traits]
path = "../../core-traits"

[dependencies.mentat_db]
path = "../../db"
