[package]
name = "pg_mentat_cli"
version = "0.1.0"
edition = "2021"
description = "Interactive CLI for querying PostgreSQL using Datalog syntax via pg_mentat"

[[bin]]
name = "pg_mentat_cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "6.0.0"
linefeed = "0.6.0"
postgres = { version = "0.19", features = ["with-serde_json-1"] }
serde_json = "1"
tabwriter = "1.4"
termion = "4.0"
